src/Par/Parser.java
package Par;

import java.util.ArrayList;
import java.util.List;
import java.util.Stack;

import Exc.CTX_EXC;
import Exc.PARSE_EXC;
import Exc.SNIPS_EXC;
import Imm.ASM.Util.Operands.RegOp;
import Imm.ASM.Util.Operands.RegOp.REG;
import Imm.AST.Function;
import Imm.AST.Namespace;
import Imm.AST.Program;
import Imm.AST.SyntaxElement;
import Imm.AST.Expression.AddressOf;
import Imm.AST.Expression.ArrayInit;
import Imm.AST.Expression.ArraySelect;
import Imm.AST.Expression.Atom;
import Imm.AST.Expression.Deref;
import Imm.AST.Expression.Expression;
import Imm.AST.Expression.FunctionRef;
import Imm.AST.Expression.IDRef;
import Imm.AST.Expression.IDRefWriteback;
import Imm.AST.Expression.InlineCall;
import Imm.AST.Expression.InstanceofExpression;
import Imm.AST.Expression.RegisterAtom;
import Imm.AST.Expression.SizeOfExpression;
import Imm.AST.Expression.SizeOfType;
import Imm.AST.Expression.StructSelect;
import Imm.AST.Expression.StructSelectWriteback;
import Imm.AST.Expression.StructureInit;
import Imm.AST.Expression.TempAtom;
import Imm.AST.Expression.TypeCast;
import Imm.AST.Expression.Arith.Add;
import Imm.AST.Expression.Arith.BitAnd;
import Imm.AST.Expression.Arith.BitNot;
import Imm.AST.Expression.Arith.BitOr;
import Imm.AST.Expression.Arith.BitXor;
import Imm.AST.Expression.Arith.Lsl;
import Imm.AST.Expression.Arith.Lsr;
import Imm.AST.Expression.Arith.Mul;
import Imm.AST.Expression.Arith.Sub;
import Imm.AST.Expression.Arith.UnaryMinus;
import Imm.AST.Expression.Boolean.And;
import Imm.AST.Expression.Boolean.Compare;
import Imm.AST.Expression.Boolean.Compare.COMPARATOR;
import Imm.AST.Expression.Boolean.Not;
import Imm.AST.Expression.Boolean.Or;
import Imm.AST.Expression.Boolean.Ternary;
import Imm.AST.Lhs.ArraySelectLhsId;
import Imm.AST.Lhs.LhsId;
import Imm.AST.Lhs.PointerLhsId;
import Imm.AST.Lhs.SimpleLhsId;
import Imm.AST.Lhs.StructSelectLhsId;
import Imm.AST.Statement.AssignWriteback;
import Imm.AST.Statement.AssignWriteback.WRITEBACK;
import Imm.AST.Statement.Assignment;
import Imm.AST.Statement.Assignment.ASSIGN_ARITH;
import Imm.AST.Statement.BreakStatement;
import Imm.AST.Statement.CaseStatement;
import Imm.AST.Statement.Comment;
import Imm.AST.Statement.ContinueStatement;
import Imm.AST.Statement.Declaration;
import Imm.AST.Statement.DefaultStatement;
import Imm.AST.Statement.DirectASMStatement;
import Imm.AST.Statement.DoWhileStatement;
import Imm.AST.Statement.EnumTypedef;
import Imm.AST.Statement.ForEachStatement;
import Imm.AST.Statement.ForStatement;
import Imm.AST.Statement.FunctionCall;
import Imm.AST.Statement.IfStatement;
import Imm.AST.Statement.ReturnStatement;
import Imm.AST.Statement.SignalStatement;
import Imm.AST.Statement.Statement;
import Imm.AST.Statement.StructTypedef;
import Imm.AST.Statement.SwitchStatement;
import Imm.AST.Statement.TryStatement;
import Imm.AST.Statement.WatchStatement;
import Imm.AST.Statement.WhileStatement;
import Imm.AsN.AsNNode.MODIFIER;
import Imm.TYPE.PROVISO;
import Imm.TYPE.TYPE;
import Imm.TYPE.COMPOSIT.ARRAY;
import Imm.TYPE.COMPOSIT.POINTER;
import Imm.TYPE.COMPOSIT.STRUCT;
import Imm.TYPE.PRIMITIVES.BOOL;
import Imm.TYPE.PRIMITIVES.CHAR;
import Imm.TYPE.PRIMITIVES.FUNC;
import Imm.TYPE.PRIMITIVES.INT;
import Imm.TYPE.PRIMITIVES.NULL;
import Par.Token.TokenType;
import Par.Token.TokenType.TokenGroup;
import Res.Const;
import Snips.CompilerDriver;
import Util.NamespacePath;
import Util.NamespacePath.PATH_TERMINATION;
import Util.Pair;
import Util.Source;
import Util.Logging.Message;
import Util.Logging.ProgressMessage;

/**
 * Parses an AST out of the token stream. The process is similar to this symbolic representation:
 * 
 * 	          --> www.reddit.com/r/ProgrammerHumor/comments/h83mqx/parser_be_like/ <--
 * 
 */
public class Parser {

	protected List<Token> tokenStream;
	
	protected Token current;
	
	/* Active Struct Ids */
	List<Pair<NamespacePath, Function>> functions = new ArrayList();
	
	/* Active Struct Ids */
	List<Pair<NamespacePath, StructTypedef>> structIds = new ArrayList();
	
	/* Active Enum Ids */
	List<Pair<NamespacePath, EnumTypedef>> enumIds = new ArrayList();
	
	/* All active Provisos, like T, V */
	List<String> activeProvisos = new ArrayList();
	
	/* The currently open namespaces */
	Stack<NamespacePath> namespaces = new Stack();
	
	Stack<List<Declaration>> scopes = new Stack();
	
	List<Message> buffered = new ArrayList();
	
	protected ProgressMessage progress;
	
	public int done = 0, toGo;
	
	public Parser(List tokens, ProgressMessage progress) throws SNIPS_EXC {
		if (tokens == null) {
			this.progress.abort();
			throw new SNIPS_EXC(Const.TOKENS_ARE_NULL);
		}
		tokenStream = tokens;
		
		this.progress = progress;
		
		this.toGo = tokens.size();
		
		current = tokenStream.get(0);
		tokenStream.remove(0);
	}
	
	/**
	 * Accept a token based on its type.
	 * @param tokenType The type the token should match.
	 * @return The accepted Token.
	 * @throws PARSE_EXC Thrown then the token does not have the given type.
	 */
	protected Token accept(TokenType tokenType) throws PARSE_EXC {
		/* Convert tokens dynamically based on the currently active provisos */
		if (this.activeProvisos.contains(current.spelling)) 
			current.type = TokenType.PROVISO;
		
		if (current.type() == tokenType) return accept();
		else {
			this.progress.abort();
			throw new PARSE_EXC(current.source, current.type(), tokenType);
		}
	}
	
	/**
	 * Accept a token based on its token group.
	 * @param group The group the token should match.
	 * @return The accepted Token.
	 * @throws PARSE_EXC Thrown when the token does not have the given token group.
	 */
	protected Token accept(TokenGroup group) throws PARSE_EXC {
		/* Convert tokens dynamically based on the currently active provisos */
		if (this.activeProvisos.contains(current.spelling)) 
			current.type = TokenType.PROVISO;
		
		if (current.type().group == group)return accept();
		else {
			this.progress.abort();
			throw new PARSE_EXC(current.source, current.type());
		}
	}
	
	public int p = 0;
	
	/**
	 * Accept a token without any checks.
	 * @return The accepted token.
	 */
	protected Token accept() {
		/* Convert tokens dynamically based on the currently active provisos */
		if (this.activeProvisos.contains(current.spelling)) 
			current.type = TokenType.PROVISO;
		
		//System.out.println("\t" + current.type.toString() + " " + current.spelling);
		
		if (this.progress != null) {
			done++;
			this.progress.incProgress((double) done / this.toGo);
		}
		
		Token old = current;
		if (!tokenStream.isEmpty()) {
			current = tokenStream.get(0);
			tokenStream.remove(0);
		}
		
		return old;
	}
	
	public SyntaxElement parse() throws PARSE_EXC {
		Program p = parseProgram();
		if (this.progress != null) this.progress.incProgress(1);
		return p;
	}
	
	protected Program parseProgram() throws PARSE_EXC {
		this.scopes.push(new ArrayList());
		Source source = this.current.source;
		List<SyntaxElement> elements = new ArrayList();
		
		while (this.current.type != TokenType.EOF) {
			this.activeProvisos.clear();
			elements.add(this.parseProgramElement());
		}
		
		accept(TokenType.EOF);
		
		Program program = new Program(elements, source);
		
		for (Message m : buffered) m.flush();
		
		this.scopes.pop();
		return program;
	}
	
	public Namespace parseNamespace() throws PARSE_EXC {
		Source source = accept(TokenType.NAMESPACE).getSource();
		
		NamespacePath path = this.parseNamespacePath();
		
		this.namespaces.push(path);
		
		accept(TokenType.LBRACE);
		
		List<SyntaxElement> elements = new ArrayList();
		
		while (current.type != TokenType.RBRACE) {
			elements.add(this.parseProgramElement());
		}
		
		this.namespaces.pop();
		
		accept(TokenType.RBRACE);
		
		return new Namespace(path, elements, source);
	}
	
	public SyntaxElement parseProgramElement() throws PARSE_EXC {
		if (current.type == TokenType.COMMENT) {
			return this.parseComment();
		}
		else if (current.type == TokenType.STRUCT || (current.type.group == TokenGroup.MODIFIER && this.tokenStream.get(0).type == TokenType.STRUCT)) {
			return this.parseStructTypedef();
		}
		else if (current.type == TokenType.ENUM || (current.type.group == TokenGroup.MODIFIER && this.tokenStream.get(0).type == TokenType.ENUM)) {
			return this.parseEnumTypedef();
		}
		else if (current.type == TokenType.NAMESPACE) {
			return this.parseNamespace();
		}
		else {
			MODIFIER mod = this.parseModifier();
			
			TYPE type = this.parseType();
			
			Token identifier = accept(TokenType.IDENTIFIER);
			
			SyntaxElement element = null;
			if (current.type == TokenType.LPAREN || current.type == TokenType.CMPLT) {
				element = this.parseFunction(type, identifier, mod);
			}
			else {
				Declaration d = this.parseGlobalDeclaration(type, identifier, mod);
				this.scopes.peek().add(d);
				element = d;
			}
			
			return element;
		}
	}
	
	public Comment parseComment() throws PARSE_EXC {
		Token comment = accept(TokenType.COMMENT);
		return new Comment(comment, comment.getSource());
	}
	
	public StructTypedef parseStructTypedef() throws PARSE_EXC {
		
		MODIFIER mod = this.parseModifier();
		
		Source source = accept(TokenType.STRUCT).getSource();
		Token id = accept(TokenType.STRUCTID);
		
		List<TYPE> proviso = this.parseProviso();
		NamespacePath path = this.buildPath(id.spelling);
		
		StructTypedef ext = null;
		List<TYPE> extProviso = new ArrayList();
		List<Declaration> extendDecs = new ArrayList();
		
		if (current.type == TokenType.COLON) {
			accept();
			
			NamespacePath ext0 = this.parseNamespacePath();
			ext = this.getStructTypedef(ext0, source);
			
			if (current.type == TokenType.CMPLT) 
				extProviso.addAll(this.parseProviso());
			
			/* Copy the extended fields */
			for (Declaration d : ext.getFields()) {
				Declaration c = d.clone();
				
				/* If number of provisos are not equal an exception will be thrown in CTX anyway */
				if (ext.proviso.size() == extProviso.size()) 
					/* Remap type of declaration to provided provisos */
					for (int i = 0; i < ext.proviso.size(); i++) {
						if (!(ext.proviso.get(i) instanceof PROVISO)) continue;
						PROVISO prov = (PROVISO) ext.proviso.get(i);
						c.setType(c.getType().remapProvisoName(prov.placeholderName, extProviso.get(i)));
					}
				
				extendDecs.add(c);
			}
		}
		
		/*
		 * Create Struct typedef here already, since struct may be linked and have a pointer
		 * to another instance of this struct. The struct definition needs to exist before
		 * such a declaration is parsed.
		 */
		StructTypedef def = new StructTypedef(path, proviso, new ArrayList(), new ArrayList(), ext, extProviso, mod, source);
		this.structIds.add(new Pair<NamespacePath, StructTypedef>(path, def));
		
		/* Add the extended fields */
		def.getFields().addAll(extendDecs);
		
		accept(TokenType.LBRACE);
		
		/* Parse the regular struct fields */
		while (current.type != TokenType.RBRACE) {
			if (current.type == TokenType.COMMENT) {
				accept();
				continue;
			}
			
			boolean field = false;
			for (int i = 1; i < this.tokenStream.size(); i++) {
				if (this.tokenStream.get(i - 1).type == TokenType.IDENTIFIER && this.tokenStream.get(i).type == TokenType.SEMICOLON) {
					field = true;
				}
				else if (this.tokenStream.get(i - 1).type == TokenType.LBRACE) {
					break;
				}
			}
			
			if (field) 
				/* Declaration */
				def.getFields().add(this.parseDeclaration(MODIFIER.SHARED, false, true));
			else {
				/* Nested function */
				MODIFIER m = this.parseModifier();
				
				TYPE type = this.parseType();
				
				Function f = this.parseFunction(type, accept(TokenType.IDENTIFIER), m);
				
				/* Insert Struct Name */
				f.path.path.add(f.path.path.size() - 1, def.path.getLast());
				
				/* Inject Self Reference */
				Declaration self = new Declaration(new NamespacePath("self"), new POINTER(def.self.clone()), MODIFIER.SHARED, f.getSource());
				f.parameters.add(0, self);
				
				def.functions.add(f);
			}
		}
		
		accept(TokenType.RBRACE);

		return def;
	}
	
	public EnumTypedef parseEnumTypedef() throws PARSE_EXC {
		Source source = accept(TokenType.ENUM).getSource();
		Token id = accept(TokenType.ENUMID);
		
		NamespacePath path = this.buildPath(id.spelling);
		
		accept(TokenType.LBRACE);
		
		List<String> enums = new ArrayList();
		
		while (current.type != TokenType.RBRACE) {
			String e = accept(TokenType.IDENTIFIER).spelling;
			enums.add(e);
			
			if (current.type == TokenType.COMMA) {
				accept();
			}
			else {
				accept(TokenType.SEMICOLON);
				break;
			}
		}
		
		for (int i = 0; i < tokenStream.size(); i++) {
			if (enums.contains(tokenStream.get(i).spelling)) {
				tokenStream.get(i).type = TokenType.ENUMLIT;
			}
		}
		
		accept(TokenType.RBRACE);
		
		EnumTypedef def = new EnumTypedef(path, enums, source);
		enumIds.add(new Pair<NamespacePath, EnumTypedef>(path, def));
		
		return def;
	}
	
	public NamespacePath buildPath(String id) {
		NamespacePath path = new NamespacePath(new ArrayList());
		for (int i = 0; i < this.namespaces.size(); i++) {
			path.path.addAll(this.namespaces.get(i).path);
		}
		path.path.add(id);
		return path;
	}
	
	public NamespacePath buildPath() {
		NamespacePath path = new NamespacePath(new ArrayList());
		for (int i = 0; i < this.namespaces.size(); i++) {
			path.path.addAll(this.namespaces.get(i).path);
		}
		return path;
	}
	
	protected Function parseFunction(TYPE returnType, Token identifier, MODIFIER mod) throws PARSE_EXC {
		this.scopes.push(new ArrayList());
		
		/* Check if a function name is a reserved identifier */
		String name = identifier.spelling;
		if (
				/* Name is a reserved identifier */
				(name.equals("resv") || name.equals("init") || name.equals("hsize") || name.equals("free")) 
				/* Currently not parsing any of the libraries that define these reserved function names */
				&& !identifier.getSource().sourceFile.equals(name + ".sn")) {
			this.progress.abort();
			throw new SNIPS_EXC(Const.USED_RESERVED_NAME, name, identifier.getSource().getSourceMarker());
		}
		
		List<TYPE> proviso = this.parseProviso();
		
		for (TYPE t : proviso) {
			PROVISO p = (PROVISO) t;
			this.activeProvisos.add(p.placeholderName);
		}
		
		accept(TokenType.LPAREN);
		
		List<Declaration> parameters = new ArrayList();
		while (current.type != TokenType.RPAREN) {
			parameters.add(this.parseDeclaration(MODIFIER.SHARED, false, false));
			if (current.type == TokenType.COMMA) {
				accept();
			}
			else {
				break;
			}
		}
		
		accept(TokenType.RPAREN);
		
		boolean signals = false;
		List<TYPE> signalsTypes = new ArrayList();
		if (current.type == TokenType.SIGNALS) {
			signals = true;
			accept();
			while (current.type != TokenType.LBRACE) {
				signalsTypes.add(this.parseType());
				if (current.type == TokenType.COMMA) {
					accept();
				}
			}
		}
		
		List<Statement> body = this.parseCompoundStatement(true);
		
		NamespacePath path = this.buildPath(identifier.spelling);
		Function f = new Function(returnType, path, proviso, parameters, signals, signalsTypes, body, mod, identifier.source);
		this.functions.add(new Pair<NamespacePath, Function>(path, f));
		
		this.scopes.pop();
		return f;
	}
	
	protected Declaration parseDeclaration(MODIFIER mod, boolean parseValue, boolean acceptSemicolon) throws PARSE_EXC {
		TYPE type = this.parseType();
		Token id = accept(TokenType.IDENTIFIER);

		Expression value = null;
		
		if (parseValue) {
			accept(TokenType.LET);
			value = this.parseExpression();
		}

		if (parseValue || acceptSemicolon) 
			accept(TokenType.SEMICOLON);
		
		Declaration d = new Declaration(new NamespacePath(id.spelling), type, value, mod, id.getSource());
		this.scopes.peek().add(d);
		return d;
	}
	
	protected Statement parseStatement() throws PARSE_EXC {
		/* Convert next token */
		if (this.activeProvisos.contains(current.spelling)) {
			current.type = TokenType.PROVISO;
		}
		
		Token modT = (current.type.group == TokenGroup.MODIFIER)? current : null;
		MODIFIER mod = this.parseModifier();
		
		boolean functionCheck = current.type == TokenType.NAMESPACE_IDENTIFIER || current.type == TokenType.IDENTIFIER;
		for (int i = 0; i < this.tokenStream.size(); i += 3) {
			if (tokenStream.get(i).type == TokenType.LPAREN || tokenStream.get(i).type == TokenType.CMPLT) {
				if (tokenStream.get(i + 1).type == TokenType.CMPLE) functionCheck = false;
				break;
			}
			functionCheck &= tokenStream.get(i).type == TokenType.COLON;
			functionCheck &= tokenStream.get(i + 1).type == TokenType.COLON;
			
			Token t = tokenStream.get(i + 2);
			if (t.type == TokenType.NAMESPACE_IDENTIFIER) {
				continue;
			}
			else if (t.type == TokenType.STRUCTID) {
				/* Found Struct ID, Must be a structure init */
				functionCheck = false;
				break;
			}
			else if (t.type != TokenType.IDENTIFIER) {
				functionCheck = false;
				break;
			}
		}
		
		boolean decCheck = current.type.group == TokenGroup.TYPE || current.type == TokenType.NAMESPACE_IDENTIFIER || current.type == TokenType.ENUMID;
		for (int i = 0; i < this.tokenStream.size(); i += 3) {
			if (tokenStream.get(i).type == TokenType.IDENTIFIER || 
				tokenStream.get(i).type == TokenType.ENUMID || 
				tokenStream.get(i).type == TokenType.LBRACKET || 
				tokenStream.get(i).type == TokenType.MUL ||
				tokenStream.get(i).type == TokenType.CMPLT) {
				break;
			}
			
			decCheck &= tokenStream.get(i).type == TokenType.COLON;
			decCheck &= tokenStream.get(i + 1).type == TokenType.COLON;
			
			Token t = tokenStream.get(i + 2);
			if (t.type == TokenType.NAMESPACE_IDENTIFIER) {
				continue;
			}
			else if (t.type == TokenType.STRUCTID) {
				break;
			}
			else if (t.type == TokenType.ENUMID) {
				break;
			}
			else {
				decCheck = false;
				break;
			}
		}
		
		/* Can only be func type dec */
		if (current.type == TokenType.FUNC) decCheck = true;
		
		if (decCheck) {
			return this.parseDeclaration(mod, true, true);
		}
		else {
			if (modT != null) {
				throw new PARSE_EXC(modT.source, modT.type, 
						TokenType.TYPE, TokenType.RETURN, TokenType.WHILE, 
						TokenType.DO, TokenType.FOR, TokenType.BREAK, 
						TokenType.CONTINUE, TokenType.SWITCH, TokenType.IDENTIFIER, 
						TokenType.IF);
			}
			else if (current.type == TokenType.ASM) {
				return this.parseDirectASM();
			}
			else if (current.type == TokenType.COMMENT) {
				return this.parseComment();
			}
			else if (functionCheck) {
				return this.parseFunctionCall();
			}
			else if (current.type == TokenType.RETURN) {
				return this.parseReturn();
			}
			else if (current.type == TokenType.WHILE) {
				return this.parseWhile();
			}
			else if (current.type == TokenType.DO) {
				return this.parseDoWhile();
			}
			else if (current.type == TokenType.FOR) {
				return this.parseFor();
			}
			else if (current.type == TokenType.BREAK) {
				return this.parseBreak();
			}
			else if (current.type == TokenType.CONTINUE) {
				return this.parseContinue();
			}
			else if (current.type == TokenType.SWITCH) {
				return this.parseSwitch();
			}
			/*
			 * LPAREN in case of statement like
			 * 
			 * (ll->lp)->size();
			 * 
			 */
			else if (current.type == TokenType.IDENTIFIER || current.type == TokenType.MUL || current.type == TokenType.NAMESPACE_IDENTIFIER || current.type == TokenType.LPAREN) {
				return this.parseAssignment(true);
			}
			else if (current.type == TokenType.IF) {
				return this.parseIf();
			}
			else if (current.type == TokenType.TRY) {
				return this.parseTry();
			}
			else if (current.type == TokenType.SIGNAL) {
				return this.parseSignal();
			}
			else {
				if (this.progress != null) this.progress.abort();
				throw new PARSE_EXC(current.source, current.type, 
				TokenType.TYPE, TokenType.RETURN, TokenType.WHILE, 
				TokenType.DO, TokenType.FOR, TokenType.BREAK, 
				TokenType.CONTINUE, TokenType.SWITCH, TokenType.IDENTIFIER, 
				TokenType.IF);
			}
		}
	}
	
	protected DirectASMStatement parseDirectASM() throws PARSE_EXC {
		Source source = current.getSource();
		
		accept(TokenType.ASM);
		
		List<Pair<Expression, REG>> dataIn = new ArrayList();
		
		List<Pair<Expression, REG>> dataOut = new ArrayList();
		
		if (current.type == TokenType.LPAREN) {
			accept();
			
			while (current.type != TokenType.RPAREN) {
				Expression in = this.parseExpression();
				
				accept(TokenType.COLON);
				
				REG reg = RegOp.convertStringToReg(accept(TokenType.IDENTIFIER).spelling);
				
				dataIn.add(new Pair<Expression, REG>(in, reg));
				
				if (current.type == TokenType.COMMA) accept();
				else break;
			}
			
			accept(TokenType.RPAREN);
		}
		
		accept(TokenType.LBRACE);
		
		List<String> assembly = new ArrayList();
		String c = "";
		
		int last = -1;
		
		while (!(current.type == TokenType.RBRACE && (this.tokenStream.get(0).type == TokenType.LPAREN || this.tokenStream.get(0).type == TokenType.SEMICOLON))) {
			if (last == -1) 
				last = current.getSource().row;
			
			if (current.type == TokenType.COLON) {
				if (!c.trim().equals("")) assembly.add(c);
				c = "";
				last = current.getSource().row;
				accept(TokenType.COLON);
			}
			else {
				Token t = accept();
				if (t.type != TokenType.COMMA && t.type != TokenType.DIRECTIVE && t.type != TokenType.COMMENT) c += t.spelling + " ";
				else if (t.type == TokenType.COMMENT) {
					c += "/* " + t.spelling + " */";
					assembly.add(c);
					c = "";
				}
				else if (t.type == TokenType.COMMA) c = c.substring(0, c.length() - 1) + ", ";
				else c += t.spelling;
				
				if (t.type == TokenType.DIRECTIVE) {
					c += current.spelling;
					current = tokenStream.get(0);
					tokenStream.remove(0);
				}
			}
		}
		
		if (!c.trim().equals("")) assembly.add(c);
		
		accept(TokenType.RBRACE);
		
		if (current.type == TokenType.LPAREN) {
			accept();
			
			while (current.type != TokenType.RPAREN) {
				REG reg = RegOp.convertStringToReg(accept(TokenType.IDENTIFIER).spelling);
				
				accept(TokenType.COLON);
				
				Expression out = this.parseExpression();
				
				dataOut.add(new Pair<Expression, REG>(out, reg));
				
				if (current.type == TokenType.COMMA) accept();
				else break;
			}
			
			accept(TokenType.RPAREN);
		}
		
		accept(TokenType.SEMICOLON);
		
		return new DirectASMStatement(assembly, dataIn, dataOut, source);
	}
	
	protected FunctionCall parseFunctionCall() throws PARSE_EXC {
		Source source = current.getSource();
		
		NamespacePath path = this.parseNamespacePath();
		
		List<TYPE> provisos = this.parseProviso();
		
		accept(TokenType.LPAREN);
		
		List<Expression> params = new ArrayList();
		while (current.type != TokenType.RPAREN) {
			params.add(this.parseExpression());
			if (current.type == TokenType.COMMA) {
				accept();
			}
			else break;
		}
		accept(TokenType.RPAREN);
		accept(TokenType.SEMICOLON);
		
		if (path.getLast().equals("free")) {
			CompilerDriver.driver.referencedLibaries.add("lib/mem/free.sn");
		}
		
		return new FunctionCall(path, provisos, params, source);
	}
	
	protected SwitchStatement parseSwitch() throws PARSE_EXC {
		Source source = accept(TokenType.SWITCH).getSource();
		accept(TokenType.LPAREN);
		Expression condition = this.parseExpression();
		accept(TokenType.RPAREN);
		accept(TokenType.LBRACE);
		
		List<CaseStatement> cases = new ArrayList();
		DefaultStatement defaultStatement = null;
		
		while (current.type != TokenType.RBRACE) {
			if (current.type == TokenType.CASE) {
				cases.add(this.parseCase());
			}
			else {
				defaultStatement = this.parseDefault();
				break;
			}
		}
		
		accept(TokenType.RBRACE);
		
		return new SwitchStatement(condition, cases, defaultStatement, source);
	}
	
	protected CaseStatement parseCase() throws PARSE_EXC {
		Source source = accept(TokenType.CASE).getSource();
		accept(TokenType.LPAREN);
		Expression condition = this.parseExpression();
		accept(TokenType.RPAREN);
		accept(TokenType.COLON);
		
		List<Statement> body = this.parseCompoundStatement(false);
		
		return new CaseStatement(condition, body, source);
	}
	
	protected DefaultStatement parseDefault() throws PARSE_EXC {
		Source source = accept(TokenType.DEFAULT).getSource();
		accept(TokenType.COLON);
		
		List<Statement> body = this.parseCompoundStatement(false);
		
		return new DefaultStatement(body, source);
	}
	
	protected BreakStatement parseBreak() throws PARSE_EXC {
		Source source = accept(TokenType.BREAK).getSource();
		accept(TokenType.SEMICOLON);
		return new BreakStatement(source);
	}
	
	protected ContinueStatement parseContinue() throws PARSE_EXC {
		Source source = accept(TokenType.CONTINUE).getSource();
		accept(TokenType.SEMICOLON);
		return new ContinueStatement(source);
	}
	
	protected IfStatement parseIf() throws PARSE_EXC {
		Source source = current.getSource();
		accept(TokenType.IF);
		accept(TokenType.LPAREN);
		Expression condition = this.parseExpression();
		accept(TokenType.RPAREN);
		
		List<Statement> body = this.parseCompoundStatement(false);
		
		IfStatement if0 = new IfStatement(condition, body, source);
		
		if (current.type == TokenType.ELSE) {
			Source elseSource = accept().getSource();
			if (current.type == TokenType.IF) {
				if0.elseStatement = (IfStatement) this.parseIf();
			}
			else {
				List<Statement> elseBody = this.parseCompoundStatement(false);
				if0.elseStatement = new IfStatement(elseBody, elseSource);
			}
		}
		
		return if0;
	}
	
	protected TryStatement parseTry() throws PARSE_EXC {
		Source source = current.getSource();
		accept(TokenType.TRY);
		
		List<Statement> body = this.parseCompoundStatement(true);
		
		List<WatchStatement> watchpoints = new ArrayList();
		while (current.type == TokenType.WATCH) {
			watchpoints.add(this.parseWatch());
		}
		
		return new TryStatement(body, watchpoints, source);
	}
	
	protected WatchStatement parseWatch() throws PARSE_EXC {
		this.scopes.push(new ArrayList());
		
		Source source = current.getSource();
		accept(TokenType.WATCH);
		
		accept(TokenType.LPAREN);
		
		Declaration watched = this.parseDeclaration(MODIFIER.SHARED, false, false);
		this.scopes.peek().add(watched);
		
		accept(TokenType.RPAREN);
		
		List<Statement> body = this.parseCompoundStatement(false);
		
		this.scopes.pop();
		return new WatchStatement(body, watched, source);
	}
	
	protected SignalStatement parseSignal() throws PARSE_EXC {
		Source source = current.getSource();
		
		accept(TokenType.SIGNAL);
		
		Expression ex0 = this.parseExpression();
		
		accept(TokenType.SEMICOLON);
		
		return new SignalStatement(ex0, source);
	}
	
	protected Statement parseFor() throws PARSE_EXC {
		this.scopes.push(new ArrayList());
		
		Source source = accept(TokenType.FOR).getSource();
		accept(TokenType.LPAREN);
		
		TYPE itType = this.parseType();
		Token itId = accept(TokenType.IDENTIFIER);
		
		if (current.type == TokenType.COLON) 
			return this.parseForEach(itType, itId);
		
		accept(TokenType.LET);
		
		Expression value = this.parseExpression();
		accept(TokenType.SEMICOLON);
		
		Declaration iterator = new Declaration(new NamespacePath(itId.spelling), itType, value, MODIFIER.SHARED, itId.getSource());
		this.scopes.peek().add(iterator);
		
		Expression condition = this.parseExpression();
		accept(TokenType.SEMICOLON);
		
		/* Dont accept semicolon */
		Statement increment = this.parseAssignment(false);
		
		accept(TokenType.RPAREN);
		
		List<Statement> body = this.parseCompoundStatement(false);
		
		this.scopes.pop();
		return new ForStatement(iterator, condition, increment, body, source);
	}
	
	protected Statement parseForEach(TYPE itType, Token itId) throws PARSE_EXC {
		this.scopes.push(new ArrayList());
		
		Declaration iterator = new Declaration(new NamespacePath(itId.spelling), itType, null, MODIFIER.SHARED, itId.getSource());
		this.scopes.peek().add(iterator);
		
		accept(TokenType.COLON);
		
		Expression shadowRef = this.parseExpression();
		
		Expression range = null;
		
		if (current.type == TokenType.COMMA) {
			accept();
			range = this.parseExpression();
		}
		
		accept(TokenType.RPAREN);
		
		List<Statement> body = this.parseCompoundStatement(false);
		
		return new ForEachStatement(iterator, shadowRef, range, body, itId.getSource());
	}
	
	protected WhileStatement parseWhile() throws PARSE_EXC {
		Source source = accept(TokenType.WHILE).getSource();
		accept(TokenType.LPAREN);
		Expression condition = this.parseExpression();
		accept(TokenType.RPAREN);
		List<Statement> body = this.parseCompoundStatement(false);
		return new WhileStatement(condition, body, source);
	}
	
	protected DoWhileStatement parseDoWhile() throws PARSE_EXC {
		Source source = accept(TokenType.DO).getSource();
		
		List<Statement> body = this.parseCompoundStatement(true);
		
		accept(TokenType.WHILE);
		
		accept(TokenType.LPAREN);
		Expression condition = this.parseExpression();
		accept(TokenType.RPAREN);
		
		accept(TokenType.SEMICOLON);
		
		return new DoWhileStatement(condition, body, source);
	}
	
	protected Statement parseAssignment(boolean acceptSemicolon) throws PARSE_EXC {
		/* Check if tokens ahead are a struct select */
		boolean structSelectCheck = current.type == TokenType.IDENTIFIER;
		for (int i = 1; i < this.tokenStream.size(); i += 2) {
			if ((tokenStream.get(i - 1).type == TokenType.INCR || tokenStream.get(i - 1).type == TokenType.DECR) && i > 1) break;
			else if (tokenStream.get(i - 1).type == TokenType.DOT || tokenStream.get(i - 1).type == TokenType.UNION_ACCESS) {
				structSelectCheck &= tokenStream.get(i).type == TokenType.IDENTIFIER;
			}
			else {
				structSelectCheck = false;
				break;
			}
		}
		
		boolean increment = current.type == TokenType.IDENTIFIER || current.type == TokenType.NAMESPACE_IDENTIFIER;
		for (int i = 0; i < this.tokenStream.size() - 3; i += 3) {
			if (tokenStream.get(i).type == TokenType.INCR || tokenStream.get(i).type == TokenType.DECR) break;
			
			increment &= tokenStream.get(i).type == TokenType.COLON;
			increment &= tokenStream.get(i + 1).type == TokenType.COLON;
			
			increment &= tokenStream.get(i + 2).type == TokenType.IDENTIFIER || tokenStream.get(i + 2).type == TokenType.NAMESPACE_IDENTIFIER;
		}
		
		Source source = current.getSource();
		
		if (increment || structSelectCheck) {
			
			if (structSelectCheck) {
